--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -9,7 +9,8 @@
 ## This setting is MANDATORY, unless 'database_url' is used.
 ##
 db:
-  user: invidious        
+  user: kemal
+  password: kemal
   host: localhost
   port: 5432
   dbname: invidious
